수상작 전시

--- a/dgufest/templates/index.html
+++ b/dgufest/templates/index.html
@@ -67,9 +67,9 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp" data-wow-delay="100ms">
                     <div class="single-portfolio-content">
-                        <img src="{% static 'img/main-sub-img/sub1.JPG' %}" alt="image">
+                        <img src="{% static 'img/prize/first.jpeg' %}" alt="image">
                         <div class="hover-content">
-                            <a href="{% static 'img/main-sub-img/sub1.JPG' %}" class="portfolio-img">+</a>
+                            <a href="{% static 'img/prize/first.jpeg' %}" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
@@ -77,9 +77,9 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item video human mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="{% static 'img/main-sub-img/sub2.JPG' %}" alt="image">
+                        <img src="{% static 'img/prize/second.jpg' %}" alt="image">
                         <div class="hover-content">
-                            <a href="{% static 'img/main-sub-img/sub2.JPG' %}" class="portfolio-img">+</a>
+                            <a href="{% static 'img/prize/second.jpg' %}" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
@@ -87,9 +87,9 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item country mb-30 wow fadeInUp" data-wow-delay="500ms">
                     <div class="single-portfolio-content">
-                        <img src="{% static 'img/main-sub-img/sub3.JPG' %}" alt="image">
+                        <img src="{% static 'img/prize/third.jpg' %}" alt="image">
                         <div class="hover-content">
-                            <a href="{% static 'img/main-sub-img/sub3.JPG' %}" class="portfolio-img">+</a>
+                            <a href="{% static 'img/prize/third.jpg' %}" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
@@ -97,9 +97,9 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item human mb-30 wow fadeInUp" data-wow-delay="700ms">
                     <div class="single-portfolio-content">
-                        <img src="{% static 'img/main-sub-img/sub4.JPG' %}" alt="image">
+                        <img src="{% static 'img/prize/pub1.jpeg' %}" alt="image">
                         <div class="hover-content">
-                            <a href="{% static 'img/main-sub-img/sub4.JPG' %}" class="portfolio-img">+</a>
+                            <a href="{% static 'img/prize/pub1.jpeg' %}" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
@@ -107,9 +107,9 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item video country mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="{% static 'img/main-sub-img/sub6.jpg' %}" alt="image">
+                        <img src="{% static 'img/prize/pub2.jpeg' %}" alt="image">
                         <div class="hover-content">
-                            <a href="{% static 'img/main-sub-img/sub6.jpg' %}" class="portfolio-img">+</a>
+                            <a href="{% static 'img/prize/pub2.jpeg' %}" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
@@ -117,9 +117,9 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item human mb-30 wow fadeInUp" data-wow-delay="500ms">
                     <div class="single-portfolio-content">
-                        <img src="{% static 'img/main-sub-img/sub7.jpg' %}" alt="image">
+                        <img src="{% static 'img/prize/booth1.jpg' %}" alt="image">
                         <div class="hover-content">
-                            <a href="{% static 'img/main-sub-img/sub7.jpg' %}" class="portfolio-img">+</a>
+                            <a href="{% static 'img/prize/booth1.jpg' %}" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
@@ -127,19 +127,9 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp" data-wow-delay="700ms">
                     <div class="single-portfolio-content">
-                        <img src="{% static 'img/main-sub-img/sub8.jpg' %}" alt="image">
+                        <img src="{% static 'img/prize/booth2.jpeg' %}" alt="image">
                         <div class="hover-content">
-                            <a href="{% static 'img/main-sub-img/sub8.jpg' %}" class="portfolio-img">+</a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Single Gallery Item -->
-                <div class="col-12 col-sm-6 col-lg-6 single_gallery_item video country mb-30 wow fadeInUp" data-wow-delay="100ms">
-                    <div class="single-portfolio-content">
-                        <img src="{% static 'img/main-sub-img/sub9.jpg' %}" alt="image">
-                        <div class="hover-content">
-                            <a href="{% static 'img/main-sub-img/sub9.jpg' %}" class="portfolio-img">+</a>
+                            <a href="{% static 'img/prize/booth2.jpeg' %}" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
@@ -147,9 +137,23 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp" data-wow-delay="100ms">
                     <div class="single-portfolio-content">
-                        <img src="{% static 'img/main-sub-img/sub12.jpg' %}" alt="image">
+                        <div id="video" style="display: block !important;">
+                            <video class="col-12" controls preload="metadata" style="padding:0;">
+                                <source src="{% static 'img/prize/performance1.mov' %}" alt="video">
+                            </video>
+                        </div>
+                        <!-- <div class="hover-content">
+                            <a href="{% static 'img/prize/performance1.mov' %}" class="whyrano-video">+</a>
+                        </div> -->
+                    </div>
+                </div>
+
+                <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="single-portfolio-content">
+                        <img src="{% static 'img/prize/performance2.jpg' %}" alt="image">
                         <div class="hover-content">
-                            <a href="{% static 'img/main-sub-img/sub12.jpg' %}" class="portfolio-img">+</a>
+                            <a href="{% static 'img/prize/performance2.jpg' %}" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
@@ -157,9 +161,9 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item human mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="{% static 'img/main-sub-img/sub10.jpg' %}" alt="image">
+                        <img src="{% static 'img/prize/etc1.jpeg' %}" alt="image">
                         <div class="hover-content">
-                            <a href="{% static 'img/main-sub-img/sub10.jpg' %}" class="portfolio-img">+</a>
+                            <a href="{% static 'img/prize/etc1.jpeg' %}" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
@@ -167,29 +171,18 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item country mb-30 wow fadeInUp" data-wow-delay="500ms">
                     <div class="single-portfolio-content">
-                        <img src="{% static 'img/main-sub-img/sub11.jpeg' %}" alt="image">
+                        <img src="{% static 'img/prize/etc2.jpeg' %}" alt="image">
                         <div class="hover-content">
-                            <a href="{% static 'img/main-sub-img/sub11.jpeg' %}" class="portfolio-img">+</a>
+                            <a href="{% static 'img/prize/etc2.jpeg' %}" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
-
-                <!-- Single Gallery Item -->
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp" data-wow-delay="100ms">
-                    <div class="single-portfolio-content">
-                        <img src="{% static 'img/main-sub-img/sub5.jpg' %}" alt="image">
-                        <div class="hover-content">
-                            <a href="{% static 'img/main-sub-img/sub5.jpg' %}" class="portfolio-img">+</a>
-                        </div>
-                    </div>
-                </div>
-
-            
             </div>
         </div>
     </div>
     <!-- Gallery Area End -->
     
     <!--Popup JavaScript-->
+    
 
 {% endblock %}
