--- a/dgufest/templates/about.html
+++ b/dgufest/templates/about.html
@@ -88,6 +88,8 @@
                         <p>* 본 사이트는 12월 31일까지 운영됩니다.</p>
                         <br>
                         <p>* 투표 기간 이후에도 자유롭게 사진 및 영상 업로드가 가능합니다. 여러분의 추억을 사이트에 마음껏 공유해주세요!</p>
+                        <br>
+                        <p>* 수상자는 동대멋사 인스타계정을 통해 확인하실 수 있습니다.</p>
                     </div>
                 </div>
 
@@ -106,7 +108,7 @@
                         <br>
                         <p>
                             수상작은 좋아요 수에 따라 결정되며, 수상자로 선정된 재학생분들에게는 상금 지급과 함께 메인에 작품이 전시될 수 있는 기회를 드립니다.<br>
-                            (중복수상은 불가합니다.)
+                            (중복 수상은 불가합니다.)
                         </p>
                         <br>
                         <p>
