--- a/dgufest/templates/index.html
+++ b/dgufest/templates/index.html
@@ -171,9 +171,9 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item country mb-30 wow fadeInUp" data-wow-delay="500ms">
                     <div class="single-portfolio-content">
-                        <img src="{% static 'img/prize/etc2.jpeg' %}" alt="image">
+                        <img src="{% static 'img/prize/etc2.jpg' %}" alt="image">
                         <div class="hover-content">
-                            <a href="{% static 'img/prize/etc2.jpeg' %}" class="portfolio-img">+</a>
+                            <a href="{% static 'img/prize/etc2.jpg' %}" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
